--- a/src/UI_Components/NavBar.module.css
+++ b/src/UI_Components/NavBar.module.css
@@ -1,7 +1,10 @@
 .navbar{
     display: flex;
     justify-content: space-between;
-    color: red;
+    padding: 20px 55px;
+    background-color: #fff8f0;
+    box-shadow: 0px 8px 13px -2px black ;
+
     
 }
 
