--- a/src/UI_Components/NavBar.module.css
+++ b/src/UI_Components/NavBar.module.css
@@ -4,10 +4,8 @@
     padding: 20px 55px;
     background-color: #fff8f0;
     box-shadow: 0px 8px 13px -2px black ;
-
-    
 }
 
-.navbarcontent{
-    
+.navbar a{
+    font-family: var(--font-family);
 }
