--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root{
+
+  --text-color:#0d1442;
+  --font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+
 *{
   box-sizing: border-box;
   padding: 0;
